# VoiceInput

./: .gitignore  Cargo.toml  README.md
config/: models.json  voiceinput.env
crates/voice-input-asr/: Cargo.toml
crates/voice-input-asr/src/: config.rs  funasr.rs  lib.rs  runner.rs  transcriber.rs
crates/voice-input-asr/tests/: funasr.rs
crates/voice-input-audio/: Cargo.toml
crates/voice-input-audio/src/: file.rs  lib.rs  pcm.rs  silence.rs  wav.rs
crates/voice-input-cli/: Cargo.toml
crates/voice-input-cli/src/: lib.rs  main.rs  smoke.rs
crates/voice-input-core/: Cargo.toml
crates/voice-input-core/src/: config.rs  controller.rs  error.rs  ime.rs  lib.rs  platform.rs
crates/voice-input-core/tests/: controller.rs
crates/voice-input-linux/: Cargo.toml
crates/voice-input-linux/src/: backend.rs  host.rs  hotkey.rs  ibus.rs  lib.rs  live_cli.rs  local.rs  main.rs  recorder.rs  runtime.rs  session.rs  settings.rs  smoke.rs  tray.rs
crates/voice-input-linux/tests/: session.rs
crates/voice-input-macos/: Cargo.toml
crates/voice-input-macos/src/: bridge.rs  host.rs  imk.rs  lib.rs  local.rs  main.rs  recorder.rs  runtime.rs  session.rs  smoke.rs
crates/voice-input-macos/tests/: host.rs  local.rs
crates/voice-input-runtime/: Cargo.toml
crates/voice-input-runtime/src/: host.rs  lib.rs  live.rs  local.rs
crates/voice-input-windows/: Cargo.toml
crates/voice-input-windows/src/: bridge.rs  host.rs  lib.rs  local.rs  main.rs  recorder.rs  runtime.rs  session.rs  smoke.rs
crates/voice-input-windows/tests/: host.rs  session.rs
docs/: native-ime.md
scripts/: bootstrap.sh  deploy_funasr_model.py  dev_install_macos_input_method.sh  dev_linux.sh  dev_linux_streaming.sh  dump_macos_input_source_state.sh  enable_voiceinput_input_method.sh  funasr_stream_server.py  install_linux_voice_input.sh  install_macos_input_method.sh  macos_input_method_common.sh  model_catalog.py  package_macos_input_method.sh  reinstall_macos_input_method.sh  requirements-asr-base.txt  requirements-asr-runtime.txt  requirements-asr.txt  run_linux_smoke.sh  run_macos_smoke.sh  setup_python_env.sh  voiceinput.sh  voiceinput_config.sh
