[package]
name = "voice-input-linux"
version = "0.1.0"
edition = "2021"

[features]
default = []
ibus = ["dep:ibus"]

[dependencies]
voice-input-asr = { path = "../voice-input-asr" }
voice-input-core = { path = "../voice-input-core" }
ibus = { version = "0.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
arboard = "3.6"
cpal = "0.16"
device_query = "4.0"
hound = "3.5"
ksni = { version = "0.3", features = ["blocking"] }
