[package]
name = "voice-input-macos"
version = "0.1.0"
edition = "2021"

[dependencies]
voice-input-core = { path = "../voice-input-core" }
voice-input-audio = { path = "../voice-input-audio" }
voice-input-asr = { path = "../voice-input-asr" }
voice-input-runtime = { path = "../voice-input-runtime" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
cocoa-foundation = "0.1"
core-foundation = "0.9"
core-graphics = "0.23"
cpal = "0.16"
fs2 = "0.4"
hound = "3.5"
objc = "0.2"
